# python-project-template

./: .gitignore  README.md  pyproject.toml
docs/: offline.sh
