[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
path = "path/to/my_module"

[tool.taskipy.tasks]
pre_test = "task build"
test = { cmd = "python -m unittest tests/test_*.py", help = "runs all unit tests" }
post_test = "task lint"
lint = { cmd = "pylint tests taskipy", help = "confirms code style using pylint" }
build = "make ."
echo = "echo {path}"
freeze = "poetry export --output requirements.txt"

[tool.poetry.scripts]
run = "wsgi:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/python-poetry-tutorial/issues"

[tool.black]
line-length = 99

[tool.isort]
# make it compatible with black
profile = "black"
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.coverage.run]
branch = true

[tool.pydocstyle]
ignore = "D100,D101,D102,D103,D104,D105,D106,D107,D213,D203"